--- a/deploy/vote/staging/service.yaml
+++ b/deploy/vote/staging/service.yaml
@@ -1,14 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
   labels:
     app: vote
+    tier: front
   name: vote
 spec:
   ports:
   - name: "80"
+    nodePort: 30000
     port: 80
-    targetPort: 80
-    nodePort: 30200
     protocol: TCP
+    targetPort: 80
+  selector:
+    app: vote
+  type: LoadBalancer
