--- a/deploy/vote/staging/kustomization.yaml
+++ b/deploy/vote/staging/kustomization.yaml
@@ -15,3 +15,10 @@ commonLabels:
 
 commonAnnotations:
   supported-by: "mohamed.adil.ibrahim@gmail.com"
+
+
+configMapGenerator:
+  - name: vote
+    literals:
+      - OPTION_A=STAGING
+      - OPTION_B=DEV
