--- a/deploy/redis/staging/kustomization.yaml
+++ b/deploy/redis/staging/kustomization.yaml
@@ -2,3 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../base
+
+
+commonLabels:
+  project: instavote
+  env: staging
+  
+  
+commonAnnotations:
+  supported-by: "mohamed.adil.ibrahim@gmail.com"
+
+
+namespace: instavote
